--- a/react-project/src/pages/pages_css/BreedPage.css
+++ b/react-project/src/pages/pages_css/BreedPage.css
@@ -25,13 +25,13 @@
 
 .breed-title {
   text-align: center;
-  color: #333;
+  color: #ffffff;
   font-size: 2rem;
 }
 
 .breed-description {
   text-align: center;
-  color: #555;
+  color: #9a9a9a;
 }
 
 .breed-button {
