--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -25,6 +25,16 @@
   padding: 2rem;
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.509);
 }
+#mainContainer main .mycards-container {
+  width: 100vw;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 1.3rem;
+  padding-bottom: 6rem;
+}
+
 #mainContainer main .edit-container {
   background-color: rgba(57, 57, 57, 0.9);
   width: 40vw;
@@ -92,6 +102,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 1.8rem;
   }
 }
