--- a/react-project/src/components/Navbar/navbar_css/Sidebar.css
+++ b/react-project/src/components/Navbar/navbar_css/Sidebar.css
@@ -47,8 +47,10 @@
 
 /* Styling for the user avatar */
 .user-avatar {
-  width: 8rem;
-  height: 11rem;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.509);
   border-radius: 30%;
   margin-bottom: 10px;
 }
