--- a/react-project/src/components/components_css/CardComp.css
+++ b/react-project/src/components/components_css/CardComp.css
@@ -113,7 +113,7 @@
   background-color: #75757555;
   padding: 2px 10px;
   border-radius: 10px;
-  backdrop-filter: blur(2px);
+  /* backdrop-filter: blur(2px); */
 
   width: fit-content;
 }
@@ -124,7 +124,7 @@
   height: 30%;
   padding: 10px;
   background-color: #4f4f4f23;
-  backdrop-filter: blur(5px);
+  /* backdrop-filter: blur(5px); */
   border-radius: 5px;
 }
 
@@ -174,7 +174,7 @@
   border-radius: 50%;
   background-color: #ffbb66;
   position: relative;
-  filter: blur(15px);
+  /* filter: blur(15px); */
   animation: floating 2600ms infinite linear;
 }
 
