--- a/react-project/src/components/Navbar/navbar_css/MuiNavbar.css
+++ b/react-project/src/components/Navbar/navbar_css/MuiNavbar.css
@@ -1,9 +1,3 @@
-#NavBGcolor{
-    background-color: #898952;
-    background-color: #B2945B;
-    background-color: #D0E562;
-    background-color: #B6D369;
-    background-color: #93C48B;
-    background-color: #2E2C2F;
-
+#NavBGcolor {
+  background-color: #2e2c2f;
 }
