--- a/react-project/src/components/Navbar/navbar_css/Sidebar.css
+++ b/react-project/src/components/Navbar/navbar_css/Sidebar.css
@@ -22,20 +22,19 @@
 }
 
 .MuiDrawer-paper {
-  width: 250px; /* Adjust the width of the sidebar as needed */
+  width: 250px;
   position: absolute;
-
-  background-color: #3d3d3d; /* Adjust the background color as needed */
+  background-color: #3d3d3d;
 }
 
 .MuiListItemText-root {
-  color: #ffffff; /* Adjust the color of the list items as needed */
+  color: #ffffff;
 }
 .MuiList-root {
   border-bottom: black 2px solid;
   padding-top: 0;
 }
-/* Styling for the profile container */
+
 .profile-container {
   display: flex;
   border-bottom: black 2px solid;
@@ -45,7 +44,6 @@
   padding: 10px;
 }
 
-/* Styling for the user avatar */
 .user-avatar {
   width: 100%;
   height: 100%;
@@ -55,7 +53,6 @@
   margin-bottom: 10px;
 }
 
-/* Styling for the profile link (to remove default link styles) */
 .profile-link {
   text-decoration: none;
   color: inherit;
@@ -66,7 +63,6 @@
 .chats-name {
   color: white;
 }
-/* Your provided styles remain unchanged... */
 
 .chat-list {
   list-style-type: none;
