--- a/react-project/src/components/components_css/ListComponent.css
+++ b/react-project/src/components/components_css/ListComponent.css
@@ -2,7 +2,7 @@
   margin-top: 1rem;
   margin-left: 11rem;
   width: 80vw;
-  height: 10rem;
+  height: 17rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -15,25 +15,33 @@
   box-shadow: 0px 87px 78px -39px rgba(0, 0, 0, 0.4);
 }
 .list-img {
-  width: 100%;
-  height: 100%;
+  width: 13rem;
+
   object-fit: contain;
   object-position: center;
 }
 .icon {
-  height: 8rem;
-  width: 9rem;
+  height: 100%;
+  width: 20rem;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 0.5rem;
-  background-color: #153586;
+  /* background-color: #153586; */
   color: rgb(59, 130, 246);
+}
+.icon div {
+  font-size: 1.3rem;
 }
 
 .icon svg {
   height: 1.25rem;
   width: 1.25rem;
+}
+.info-item {
+  margin-right: 20px;
+  display: inline-block;
 }
 
 .list-content {
@@ -118,7 +126,6 @@
   .list-desc {
     display: flex;
     flex-direction: column;
-    margin-left: 0;
     font-size: 0.75rem;
     line-height: 1.2;
   }
@@ -131,5 +138,28 @@
   .icon {
     font-size: 0.7rem;
     flex-direction: column;
+  }
+}
+@media (max-width: 900px) {
+  .list-item {
+    margin-left: 3rem;
+    width: 100%;
+    height: 13rem;
+    display: flex;
+    margin-left: 0;
+    padding-top: 0;
+  }
+  .list-desc {
+    line-height: 0.25rem;
+  }
+  .list-title {
+    font-size: 1.5rem;
+    line-height: 1.2;
+  }
+  .list-img {
+    width: 80%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
   }
 }
