--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -1,7 +1,3 @@
-/* .MuiContainer-root{
- 
-} */
-
 #mainContainer main {
   background-image: url("../public/foot-print.png");
   width: 100%;
@@ -27,12 +23,9 @@
 }
 #mainContainer main .mycards-container {
   width: 100vw;
-  margin-top: 1rem;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding-left: 1.3rem;
-  padding-bottom: 6rem;
 }
 
 #mainContainer main .edit-container {
@@ -99,6 +92,30 @@
     width: 90vw;
   }
   #mainContainer main .mycards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (max-width: 900px) {
+  #mainContainer main .profile-container {
+    width: 80vw;
+  }
+  #mainContainer main .edit-container {
+    width: 80vw;
+  }
+  #mainContainer main .register-container {
+    width: 80vw;
+  }
+  #mainContainer main .login-container {
+    width: 80vw;
+  }
+  #mainContainer main .create-container {
+    width: 80vw;
+  }
+
+  #mainContainer main .mycards-container {
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
