--- a/react-project/src/pages/pages_css/MyCardsPage.css
+++ b/react-project/src/pages/pages_css/MyCardsPage.css
@@ -1,11 +1,4 @@
-.AdoptionPageHeader {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.adoption-container {
+.mycards-container {
   width: 100vw;
   padding-bottom: 12rem;
   display: flex;
@@ -13,35 +6,28 @@
   align-items: center;
   justify-content: center;
 }
-.adoption-grid-container {
+
+.mycards-grid-container {
   display: grid;
   gap: 14rem;
   padding: 20px;
 }
 
 @media (min-width: 900px) {
-  .adoption-grid-container {
+  .mycards-grid-container {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media (min-width: 600px) and (max-width: 899px) {
-  .adoption-grid-container {
-    gap: 4rem;
+  .mycards-grid-container {
+    gap: 2rem;
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 599px) {
-  .adoption-grid-container {
+  .mycards-grid-container {
     grid-template-columns: 1fr;
-  }
-}
-
-@media (max-width: 900px) {
-  .AdoptionPageHeader {
-    width: 100%;
-    padding: 0;
-    justify-content: end;
   }
 }
