--- a/react-project/src/components/components_css/CardComp.css
+++ b/react-project/src/components/components_css/CardComp.css
@@ -113,6 +113,7 @@
   background-color: #75757555;
   padding: 2px 10px;
   border-radius: 10px;
+  margin-bottom: 1rem;
   /* backdrop-filter: blur(2px); */
 
   width: fit-content;
@@ -126,6 +127,9 @@
   background-color: #4f4f4f23;
   /* backdrop-filter: blur(5px); */
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
@@ -233,9 +237,13 @@
   object-fit: cover;
   object-position: center;
 }
+
 @media (max-width: 600px) {
   .card {
     width: 100vw;
+  }
+  .front-content .description {
+    font-size: 0.8rem;
   }
 }
 
