--- a/react-project/src/components/components_css/ListComponent.css
+++ b/react-project/src/components/components_css/ListComponent.css
@@ -125,6 +125,9 @@
     flex-direction: column;
     height: 8rem;
   }
+  .origin {
+    display: none;
+  }
 }
 @media (max-width: 900px) {
   .list-item {
